--- a/css/blocks/_hero.scss
+++ b/css/blocks/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url(../../img/bg.jpg) top center / cover no-repeat;
+    background: url(../img/bg.jpg) top center / cover no-repeat;
     background-color: #1968B1;
     height: 100vh;
     min-height: 650px;
