--- a/css/blocks/_order-section.scss
+++ b/css/blocks/_order-section.scss
@@ -1,4 +1,4 @@
 .order-section {
-    background: url(../../img/cta.jpg) top center / cover no-repeat, #2B2B2B;
+    background: url(../img/cta.jpg) top center / cover no-repeat, #2B2B2B;
     color: #fff;
 }
