--- a/css/blocks/_benefits.scss
+++ b/css/blocks/_benefits.scss
@@ -19,7 +19,7 @@
         }
 
         &::before {
-            content: url('../../img/icons/separator.png');
+            content: url('../img/icons/separator.png');
             position: absolute;
             top: 64px;
             right: 0px;
