--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,7 @@ $z-fixed-menu: 100;
 @import "blocks/_benefit.scss";
 @import "blocks/_reviews.scss";
 @import "blocks/_interactive-avatar.scss";
-@import "blocks/_order-section.scss";
+@import "blocks/_order.scss";
 @import "blocks/_form.scss";
 @import "blocks/_radio.scss";
 @import "blocks/_fixed-menu.scss";
