--- a/css/blocks/_benefit.scss
+++ b/css/blocks/_benefit.scss
@@ -1,10 +1,16 @@
 .benefit {
     text-align: center;
 
+    &__image {
+        @include phones {
+            flex-shrink: 0;
+        }
+    }
+
     &__image-wrapper {
         display: inline-block;
-        width: 128px;
-        height: 128px;
+        width: rem(128px);
+        height: rem(128px);
         position: relative;
         background: #F2F5F4;
         border-radius: 50%;
@@ -12,18 +18,31 @@
     }
 
     &__icon {
-        width: 68px;
-        height: 68px;
+        width: rem(68px);
+        height: rem(68px);
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        fill: #000;
     }
 
     &__title {
-        font-size: 27px;
+        font-size: rem(27px);
         font-weight: 700;
         color: $lightBlack;
+
+        @include phones {
+            margin-bottom: rem(10px);
+        }
+    }
+
+    &__text {
+        @include phones {
+            text-align: left;
+            margin-left: rem(12px);
+            padding-right: rem(30px);
+        }
     }
 
 }
