--- a/css/blocks/_reviews.scss
+++ b/css/blocks/_reviews.scss
@@ -1,18 +1,38 @@
 .reviews {
+
+    @include phones {
+        padding-top: rem(96px);
+        padding-bottom: rem(82px);
+    }
+
     &__display {
         background: #F8FAF9;
-        padding: 42px;
-        margin-bottom: 15px;
+        padding: rem(42px);
+        margin-bottom: rem(15px);
+
+        @include tablets {
+            margin-bottom: rem(32px);
+        }
     }
 
     &__display-inner {
         display: flex;
         align-items: center;
+
+        @include tablets {
+            flex-direction: column;
+            text-align: center;
+        }
     }
 
     &__avatar {
-        width: 253px;
-        height: 264px;
+        width: rem(253px);
+        height: rem(264px);
+
+        @include tablets {
+            width: rem(130px);
+            height: rem(130px);
+        }
     }
 
     &__avatar-img {
@@ -23,18 +43,23 @@
 
     &__content {
         flex: 1;
-        margin-left: 40px;
+        margin-left: rem(40px);
+
+        @include tablets {
+            margin-left: 0;
+            margin-top: rem(32px);
+        }
     }
 
     &__title {
         color: $lightBlack;
-        font-size: 27px;
+        font-size: rem(27px);
         font-weight: 700;
-        margin-bottom: 14px;
+        margin-bottom: rem(14px);
     }
 
     &__text {
-        margin-bottom: 25px;
+        margin-bottom: rem(25px);
     }
 
     &__author {
