--- a/css/blocks/_benefits.scss
+++ b/css/blocks/_benefits.scss
@@ -1,13 +1,30 @@
 .benefits {
+
+    @include phones {
+        padding-top: rem(50px);
+        padding-bottom: rem(50px);
+    }
     
     &__list {
         display: flex;
+
+        @include phones {
+            flex-direction: column;
+        }
     }
 
     &__item {
         flex: 1;
         padding: 0 3%;
         position: relative;
+
+        @include phones {
+            padding: 0;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin-bottom: rem(40px);
+        }
 
         &:first-child {
             padding-left: 0;
@@ -24,9 +41,13 @@
         &::before {
             content: url('../img/icons/separator.png');
             position: absolute;
-            top: 64px;
-            right: 0px;
+            top: rem(64px);
+            right: rem(0px);
             transform: translateX(50%);
+
+            @include phones {
+                content: none;
+            }
         }
     }
 }
