--- a/css/blocks/_btn.scss
+++ b/css/blocks/_btn.scss
@@ -1,12 +1,12 @@
 .btn {
     display: inline-block;
-    font-size: 16px;
+    font-size: rem(16px);
     font-weight: 700;
     line-height: 1;
-    padding: 21px 41px;
+    padding: rem(21px) rem(41px);
     text-transform: uppercase;
     text-decoration: none;
-    border-radius: 100px;
+    border-radius: rem(100px);
     border: none;
     cursor: pointer;
 
