--- a/css/blocks/_fixed-menu.scss
+++ b/css/blocks/_fixed-menu.scss
@@ -4,11 +4,15 @@
     right: 3%;
     z-index: $z-fixed-menu;
 
+    @include tablets {
+        display: none;
+    }
+
     &__item {
-        margin-bottom: 5px;
+        margin-bottom: rem(5px);
 
         &:last-child {
-            margin-bottom: 0px;
+            margin-bottom: rem(0px);
         }
 
         &--active {
@@ -20,18 +24,18 @@
 
     &__link {
         display: block;
-        width: 16px;
-        height: 16px;
+        width: rem(16px);
+        height: rem(16px);
         border-radius: 50%;
-        border: 1px solid transparent;
+        border: rem(1px) solid transparent;
         position: relative;
 
         &::before {
             content: '';
             display: block;
             position: absolute;
-            width: 6px;
-            height: 6px;
+            width: rem(6px);
+            height: rem(6px);
             border-radius: 50%;
             background: #fff;
             top: 50%;
