--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -1,38 +1,56 @@
 .form {
     display: flex;
 
+    @include tablets {
+        flex-direction: column;
+        padding: 0 19%;
+    }
+
+    @include phones {
+        padding: 0;
+    }
+
     &__col {
         flex: 1;
-        margin-right: 20px;
+        margin-right: rem(20px);
+
+        @include tablets {
+            margin-right: 0;
+        }
 
         &:last-child {
-            margin-right: 0px;
+            margin-right: rem(0px);
         }
     }
 
     &__col:nth-child(2) > &__row {
-        margin-bottom: 31px;
+        margin-bottom: rem(31px);
     }
 
     &__row {
         display: flex;
-        margin-bottom: 14px;
+        margin-bottom: rem(14px);
     }
 
     &__block {
         flex: 1;
-        margin-right: 20px;
+        margin-right: rem(20px);
 
         &:last-child {
-            margin-right: 0px;
+            margin-right: rem(0px);
         }
     }
 
     &__input {
         width: 100%;
-        padding: 18px 12px;
-        border-radius: 4px;
-        border: 3px solid transparent;
+        padding: rem(18px) rem(12px);
+        border-radius: rem(4px);
+        border: rem(3px) solid transparent;
+
+        @include phones {
+            padding-top: 0.4rem;
+            padding-bottom: 0.4rem;
+        }
 
         &:focus {
             border-color: #FEDB3F;
@@ -40,26 +58,40 @@
         }
 
         &--textarea {
-            height: 164px;
+            height: rem(164px);
             resize: none;
+
+            @include phones {
+                height: rem(82px);
+            }
         }
     }
 
     &__controls {
         display: flex;
         flex-wrap: wrap;
-        margin-bottom: 16px;
+        margin-bottom: rem(16px);
+
+        @include phones {
+            justify-content: center;
+        }
     }
 
     &__btns {
-        margin-top: 44px;
+        margin-top: rem(44px);
+
+        @include tablets {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     &__btn {
-        margin-right: 22px;
+        margin-right: rem(22px);
 
         &:last-child {
-            margin-right: 0px;
+            margin-right: rem(0px);
         }
     }
 }
