--- a/css/blocks/_headline.scss
+++ b/css/blocks/_headline.scss
@@ -1,12 +1,16 @@
 .headline {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: rem(50px);
 
     &__title {
-        margin-bottom: 17px;
+        margin-bottom: rem(17px);
     }
 
     &__subtitle {
         padding: 0 27%;
+
+        @include phones {
+            padding: 0;
+        }
     }
 }
