--- a/css/blocks/_interactive-avatar.scss
+++ b/css/blocks/_interactive-avatar.scss
@@ -1,9 +1,9 @@
 .interactive-avatar {
-    width: 74px;
-    height: 74px;
+    width: rem(74px);
+    height: rem(74px);
     border-radius: 50%;
     overflow: hidden;
-    border: 6px solid transparent;
+    border: rem(6px) solid transparent;
     position: relative;
 
     &--active {
