--- a/css/blocks/_radio.scss
+++ b/css/blocks/_radio.scss
@@ -2,10 +2,10 @@
     display: flex;
     cursor: pointer;
     user-select: none;
-    margin-right: 12px;
+    margin-right: rem(12px);
 
     &:last-child {
-        margin-right: 0px;
+        margin-right: rem(0px);
     }
 
     &__elem {
@@ -19,18 +19,18 @@
     }
 
     &__visible {
-        width: 24px;
-        height: 24px;
+        width: rem(24px);
+        height: rem(24px);
         position: relative;
         border-radius: 50%;
         background: #fff;
-        margin-right: 10px;
+        margin-right: rem(10px);
 
         &::before {
             content: '';
             display: none;
-            width: 12px;
-            height: 12px;
+            width: rem(12px);
+            height: rem(12px);
             background: #FEDB3F;
             border-radius: 50%;
             position: absolute;
@@ -42,7 +42,7 @@
 
     &--checkbox {
         .radio__visible {
-            border-radius: 4px;
+            border-radius: rem(4px);
 
             &::before {
                 background: url('../../img/icons/tick.png') no-repeat;
