--- a/css/blocks/_section.scss
+++ b/css/blocks/_section.scss
@@ -2,18 +2,28 @@ $lightBlack: #292929;
 
 .section {
     height: 100vh;
-    min-height: 650px;
+    min-height: rem(650px);
     display: flex;
     flex-direction: column;
     justify-content: center;
 
+    @include tablets {
+        min-height: rem(1000px);
+        justify-content: space-between;
+    }
+
+    @include phones {
+        min-height: fit-content;
+        height: auto;
+    }
+
     &__title {
-        font-size: 48px;
+        font-size: rem(48px);
         line-height: 1;
         text-transform: uppercase;
         font-weight: 700;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: rem(30px);
         color: $lightBlack;
 
         &--white {
