--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,10 +1,21 @@
+html {
+    font-size: $baseFontSize;
+
+    @include tablets {
+        font-size: $baseFontSize - 1px;
+    }
+
+    @include phones {
+        font-size: $baseFontSize - 2px;
+    }
+}
+
 html,
 body {
     height: 100%;
 }
 
 body {
-    font-size: $baseFontSize;
     font-family: 'Alegreya Sans', sans-serif;
     line-height: 1.42;
     position: relative;
@@ -14,14 +25,28 @@ body {
 .wrapper {
     position: relative;
     width: 100%;
-    min-width: $containerWidth + 20px;
     min-height: 100%;
     overflow: hidden;
 }
 
 .container {
-    width: $containerWidth;
+    width: 100%;
+    padding: 0 rem(10px);
+    max-width: $containerWidth;
     margin: 0 auto;
+
+    @include tablets {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+.maincontent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 h1,
@@ -41,6 +66,7 @@ table {
 ul {
     padding: 0;
     margin: 0;
+
     li {
         list-style: none;
     }
@@ -67,4 +93,8 @@ a {
 img {
     display: block;
     max-width: 100%;
+}
+
+address {
+    font-style: normal;
 }
