--- a/css/normalize.css
+++ b/css/normalize.css
@@ -237,7 +237,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
+    outline: rem(1px) dotted ButtonText;
 }
 
 /**
@@ -316,7 +316,7 @@ textarea {
 [type="search"] {
     -webkit-appearance: textfield;
     /* 1 */
-    outline-offset: -2px;
+    outline-offset: rem(-2px);
     /* 2 */
 }
 
