--- a/css/blocks/_features.scss
+++ b/css/blocks/_features.scss
@@ -19,6 +19,7 @@
     &__icon {
         fill: #fff;
         width: rem(35px);
+        height: rem(35px);
         margin-right: rem(14px);
     }
     &__text {
