--- a/css/blocks/_map.scss
+++ b/css/blocks/_map.scss
@@ -1,22 +1,11 @@
 .map {
-    height: fit-content;
 
-    @include tablets {
-        min-height: fit-content;
-        height: auto;
-    }
+    height: 100vh;
+    padding: 0;
 
     &__wrapper {
         width: 100%;
-        height: rem(652px);
+        height: 100%;
         background: url(../img/map.jpg) center center / cover no-repeat;
-
-        @include tablets {
-            height: rem(526px);
-        }
-
-        @include phones {
-            height: rem(482px);
-        }
     }
 }
