--- a/css/blocks/_radio.scss
+++ b/css/blocks/_radio.scss
@@ -45,7 +45,7 @@
             border-radius: rem(4px);
 
             &::before {
-                background: url('../../img/icons/tick.png') no-repeat;
+                background: url('../img/icons/tick.png') no-repeat;
             }
         }
     }
