--- a/css/layout.scss
+++ b/css/layout.scss
@@ -36,7 +36,6 @@ body {
     margin: 0 auto;
 
     @include tablets {
-        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -47,6 +46,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 
 h1,
