--- a/css/blocks/_order.scss
+++ b/css/blocks/_order.scss
@@ -1,4 +1,4 @@
 .order {
-    background: url(../img/cta.jpg) top center / cover no-repeat, #2B2B2B;
+    background: url(../img/content/cta.jpg) top center / cover no-repeat, #2B2B2B;
     color: #fff;
 }
