--- a/css/blocks/_reviews.scss
+++ b/css/blocks/_reviews.scss
@@ -1,7 +1,7 @@
 .reviews {
 
     &__display {
-        background: #F8FAF9;
+        background: $grey;
         padding: rem(42px);
         margin-bottom: rem(15px);
 
