--- a/css/blocks/_map.scss
+++ b/css/blocks/_map.scss
@@ -6,6 +6,6 @@
     &__wrapper {
         width: 100%;
         height: 100%;
-        background: url(../img/map.jpg) center center / cover no-repeat;
+        background: url(../img/content/map.jpg) center center / cover no-repeat;
     }
 }
