--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -5,7 +6,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700&display=swap");
 html {
 	line-height: 1.15;
 	/* 1 */
@@ -410,6 +411,10 @@ body {
 	position: relative;
 }
 
+.lock {
+	overflow: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -461,7 +466,7 @@ address {
 }
 
 .hero {
-	background: url(../img/bg.jpg) top center/cover no-repeat;
+	background: url(../img/content/bg.jpg) top center/cover no-repeat;
 	background-color: #1968B1;
 	color: #fff;
 }
@@ -478,7 +483,7 @@ address {
 	        flex-direction: row;
 	padding: 1.3333333333rem 0rem 3.3333333333rem 0rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
 	.hero.section {
 		height: 100vh;
 		padding-bottom: 0;
@@ -576,29 +581,6 @@ address {
 	height: 2.2222222222rem;
 }
 
-@media screen and (max-width: 768px) {
-	.menu {
-		display: none;
-	}
-}
-.menu__list {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-}
-.menu__item {
-	margin-right: 0.5vw;
-}
-.menu__item:last-child {
-	margin-right: 0rem;
-}
-.menu__link {
-	text-decoration: none;
-}
-
 .phone-number {
 	font-size: 1.2222222222rem;
 	text-decoration: none;
@@ -617,6 +599,87 @@ address {
 }
 .phone-number__icon--white {
 	fill: #fff;
+}
+
+@media screen and (max-width: 768px) {
+	.top-menu {
+		display: none;
+	}
+}
+.top-menu__list {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+}
+.top-menu__item {
+	margin-right: 0.5vw;
+}
+.top-menu__item:last-child {
+	margin-right: 0rem;
+}
+.top-menu__link {
+	text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+	.mobile-menu {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		opacity: 0;
+		width: 100%;
+		height: 100%;
+		background: #333537;
+		z-index: 200;
+		overflow: auto;
+		-webkit-transition: opacity 0.5s;
+		transition: opacity 0.5s;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+	}
+	.mobile-menu__list {
+		width: 100%;
+		padding: 0 1rem;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+	}
+	.mobile-menu__item {
+		font-size: 2rem;
+		color: #fff;
+	}
+	.mobile-menu__link {
+		text-decoration: none;
+	}
+	.mobile-menu__close {
+		position: absolute;
+		top: 2.3333333333rem;
+		right: 2.3333333333rem;
+	}
+}
+
+.is-active {
+	left: 0;
+	opacity: 1;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
 }
 
 .features {
@@ -824,6 +887,309 @@ address {
 	}
 }
 
+.slider {
+	background: #F8FAF9;
+}
+.slider__container {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+	.slider__container {
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: row;
+		        flex-direction: row;
+	}
+}
+.slider__slide {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: stretch;
+	    -ms-flex-align: stretch;
+	        align-items: stretch;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	padding: 0 0.5rem;
+}
+@media screen and (max-width: 768px) {
+	.slider__slide {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		padding: 0;
+	}
+}
+@media screen and (max-width: 768px) {
+	.slider-controls {
+		-ms-flex-item-align: start;
+		    align-self: flex-start;
+		margin-top: 28%;
+	}
+}
+@media screen and (max-width: 480px) {
+	.slider-controls {
+		margin-top: 35%;
+	}
+}
+.slider-control {
+	stroke: #000;
+	fill: transparent;
+	width: 0.7777777778rem;
+	height: 1.5rem;
+	cursor: pointer;
+}
+
+.slide__image {
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
+}
+@media screen and (max-width: 768px) {
+	.slide__image {
+		width: 45%;
+	}
+}
+@media screen and (max-width: 480px) {
+	.slide__image {
+		width: 60%;
+	}
+}
+.slide__image-background {
+	position: absolute;
+	width: 80%;
+	height: 60%;
+	z-index: 0;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+	fill: #ECECEC;
+}
+.slide__image-item {
+	z-index: 1;
+}
+.slide__text {
+	-webkit-box-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: stretch;
+	    -ms-flex-align: stretch;
+	        align-items: stretch;
+	-webkit-box-pack: space-evenly;
+	    -ms-flex-pack: space-evenly;
+	        justify-content: space-evenly;
+}
+@media screen and (max-width: 768px) {
+	.slide__text {
+		width: 70%;
+	}
+}
+@media screen and (max-width: 480px) {
+	.slide__text {
+		width: 100%;
+	}
+}
+.slide__row {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+}
+@media screen and (max-width: 768px) {
+	.slide__row {
+		-webkit-box-pack: space-evenly;
+		    -ms-flex-pack: space-evenly;
+		        justify-content: space-evenly;
+		margin-bottom: 1.3333333333rem;
+	}
+	.slide__row:last-child {
+		margin-bottom: 0;
+	}
+}
+.slide__col:first-child {
+	margin-right: 1.6666666667rem;
+}
+@media screen and (max-width: 768px) {
+	.slide__col:first-child {
+		margin-right: 0;
+	}
+}
+
+.product__dropdown-element {
+	padding: 0.6666666667rem 0.3888888889rem;
+	background: #3A587E;
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	border-radius: 4px;
+	position: relative;
+	cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+	.product__dropdown-element {
+		display: none;
+	}
+}
+.product__dropdown-element:hover {
+	background: #3465A3;
+}
+.product__dropdown-element:hover > .product__dropdown-block {
+	left: 100%;
+	opacity: 1;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
+}
+.product__dropdown-block {
+	position: absolute;
+	top: 0;
+	left: -9999px;
+	opacity: 0;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
+	cursor: pointer;
+}
+.product__dropdown-icon {
+	width: 2.1111111111rem;
+	height: 2.1111111111rem;
+	fill: #fff;
+}
+.product__dropdown-name {
+	color: #fff;
+	font-size: 0.7777777778rem;
+	margin-top: 0.3888888889rem;
+	text-transform: uppercase;
+	-ms-flex-negative: 0;
+	    flex-shrink: 0;
+}
+.product__title {
+	font-size: 2rem;
+	font-weight: bold;
+	text-align: left;
+	text-transform: uppercase;
+	color: #000;
+}
+@media screen and (max-width: 768px) {
+	.product__title {
+		text-align: center;
+		margin-bottom: 0.7777777778rem;
+	}
+}
+@media screen and (max-width: 768px) {
+	.product__descr {
+		text-align: center;
+	}
+}
+.product__param {
+	white-space: nowrap;
+}
+.product__param--value {
+	font-weight: bold;
+	color: #000;
+}
+.product__price {
+	font-size: 3.3333333333rem;
+	color: #000;
+	font-weight: 300;
+	white-space: nowrap;
+}
+.product__price::after {
+	content: " ₽";
+}
+@media screen and (max-width: 480px) {
+	.product__price {
+		font-size: 2.8rem;
+	}
+}
+
+.dropdown-block {
+	padding: 1.1666666667rem;
+	background: #f0f0f0;
+	border-radius: 0.2222222222rem;
+	color: #000;
+	white-space: nowrap;
+}
+.dropdown-block__param {
+	padding-right: 2.2222222222rem;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
+}
+.dropdown-block__param-img {
+	width: 1.3333333333rem;
+	height: 1.3333333333rem;
+	margin-right: 0.6666666667rem;
+	fill: #000;
+}
+.dropdown-block__row {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	margin-bottom: 1.1rem;
+	font-size: 0.8888888889rem;
+}
+.dropdown-block__row:last-child {
+	margin-bottom: 0;
+}
+
 .reviews__display {
 	background: #F8FAF9;
 	padding: 2.3333333333rem;
@@ -932,7 +1298,7 @@ address {
 }
 
 .order {
-	background: url(../img/cta.jpg) top center/cover no-repeat, #2B2B2B;
+	background: url(../img/content/cta.jpg) top center/cover no-repeat, #2B2B2B;
 	color: #fff;
 }
 
@@ -1142,7 +1508,7 @@ address {
 
 .hamburger {
 	width: 24px;
-	height: 20px;
+	height: 24px;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
@@ -1165,6 +1531,14 @@ address {
 	height: 4px;
 	border-radius: 2px;
 }
+.hamburger__plank--close:first-child {
+	-webkit-transform: translateY(10px) rotate(45deg);
+	        transform: translateY(10px) rotate(45deg);
+}
+.hamburger__plank--close:last-child {
+	-webkit-transform: translateY(-10px) rotate(-45deg);
+	        transform: translateY(-10px) rotate(-45deg);
+}
 
 .map {
 	height: 100vh;
@@ -1173,7 +1547,7 @@ address {
 .map__wrapper {
 	width: 100%;
 	height: 100%;
-	background: url(../img/map.jpg) center center/cover no-repeat;
+	background: url(../img/content/map.jpg) center center/cover no-repeat;
 }
 
 .footer {
