--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $grey: #F8FAF9;
 
 //z-indexes
 $z-fixed-menu: 100;
+$z-mobile-menu: 200;
 
 @import "media";
 
@@ -17,18 +18,20 @@ $z-fixed-menu: 100;
 @import "normalize";
 
 //setups
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700&display=swap");
 @import "layout";
 
 //components
 @import "blocks/_hero.scss";
 @import "blocks/_header.scss";
+@import "blocks/_menu.scss";
 @import "blocks/_features.scss";
 @import "blocks/_btn.scss";
 @import "blocks/_section.scss";
 @import "blocks/_headline.scss";
 @import "blocks/_benefits.scss";
 @import "blocks/_benefit.scss";
+@import "blocks/_slider.scss";
 @import "blocks/_reviews.scss";
 @import "blocks/_interactive-avatar.scss";
 @import "blocks/_order.scss";
