--- a/css/main.css
+++ b/css/main.css
@@ -624,6 +624,9 @@ address {
 	text-decoration: none;
 }
 
+.mobile-menu {
+	display: none;
+}
 @media screen and (max-width: 768px) {
 	.mobile-menu {
 		position: fixed;
