--- a/css/blocks/_reviews.scss
+++ b/css/blocks/_reviews.scss
@@ -4,6 +4,8 @@
         background: $grey;
         padding: rem(42px);
         margin-bottom: rem(15px);
+        display: flex;
+        overflow: hidden;
 
         @include tablets {
             margin-bottom: rem(32px);
@@ -11,12 +13,18 @@
     }
 
     &__display-inner {
-        display: flex;
+        display: none;
         align-items: center;
+        flex-basis: 100%;
+        flex-shrink: 0;
 
         @include tablets {
             flex-direction: column;
             text-align: center;
+        }
+
+        &--active {
+            display: flex;
         }
     }
 
