--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -35,6 +35,7 @@
     &__block {
         flex: 1;
         margin-right: rem(20px);
+        position: relative;
 
         &:last-child {
             margin-right: rem(0px);
@@ -65,6 +66,12 @@
                 height: rem(82px);
             }
         }
+    }
+
+    &__validity {
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 
     &__controls {
