--- a/css/blocks/_radio.scss
+++ b/css/blocks/_radio.scss
@@ -11,10 +11,13 @@
     &__elem {
         display: none;
 
-        &:checked ~ .radio__visible {
+        &[type="radio"]:checked + .radio__visible {
             &::before {
                 display: block;
             }
+        }
+        &[type="checkbox"]:checked + .radio__visible > .radio__visible-tick {
+            display: block;
         }
     }
 
@@ -43,9 +46,17 @@
     &--checkbox {
         .radio__visible {
             border-radius: rem(4px);
+            position: relative;
 
-            &::before {
-                background: url('../img/icons/tick.png') no-repeat;
+            &-tick {
+                display: none;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: rem(10px);
+                height: rem(8px);
+                fill: #FEDB3F;
             }
         }
     }
