--- a/css/main.css
+++ b/css/main.css
@@ -1467,7 +1467,10 @@ address {
 .radio__elem {
 	display: none;
 }
-.radio__elem:checked ~ .radio__visible::before {
+.radio__elem[type=radio]:checked + .radio__visible::before {
+	display: block;
+}
+.radio__elem[type=checkbox]:checked + .radio__visible > .radio__visible-tick {
 	display: block;
 }
 .radio__visible {
@@ -1493,9 +1496,18 @@ address {
 }
 .radio--checkbox .radio__visible {
 	border-radius: 0.2222222222rem;
+	position: relative;
 }
-.radio--checkbox .radio__visible::before {
-	background: url("../img/icons/tick.png") no-repeat;
+.radio--checkbox .radio__visible-tick {
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+	width: 0.5555555556rem;
+	height: 0.4444444444rem;
+	fill: #FEDB3F;
 }
 
 .fixed-menu {
@@ -1690,7 +1702,7 @@ address {
 }
 @media screen and (max-width: 480px) {
 	.team__container {
-		min-height: 30rem;
+		min-height: 33.3333333333rem;
 	}
 }
 .team__list {
