--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,10 +1,9 @@
 .footer {
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
     background: #fff;
+
+    &--onMap {
+        transform: translateY(-100%);
+    }
 
     &__container {
         padding-top: rem(17px);
