--- a/src/styles/blocks/_player.scss
+++ b/src/styles/blocks/_player.scss
@@ -18,15 +18,19 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: url("../../img/content/splashscreen.jpg") center center / cover no-repeat;
+        background: url("../img/content/splashscreen.jpg") center center / cover no-repeat;
         cursor: pointer;
 
         &:before {
-            content: url("../../img/content/play-big.png");
+            content: url("../img/content/play-big.png");
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+
+            @include phones {
+                transform: translate(-50%, -50%) scale(0.5);
+            }
         }
     }
 
