--- a/src/styles/blocks/_accordion.scss
+++ b/src/styles/blocks/_accordion.scss
@@ -97,15 +97,15 @@
         }
 
         &--long {
-            background: url(../../img/content/long.jpg) center center / cover no-repeat;
+            background: url(../img/content/long.jpg) center center / cover no-repeat;
         }
 
         &--short {
-            background: url(../../img/content/short.jpg) center center / cover no-repeat;
+            background: url(../img/content/short.jpg) center center / cover no-repeat;
         }
 
         &--soft {
-            background: url(../../img/content/soft.jpg) center center / cover no-repeat;
+            background: url(../img/content/soft.jpg) center center / cover no-repeat;
         }
 
         &::before {
