--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -22,23 +22,23 @@
 }
 
 .mobile-menu {
-
     display: none;
 
     @include tablets {
-        position: fixed;
-        top: 0;
-        left: -100%;
-        opacity: 0;
-        width: 100%;
-        height: 100%;
-        background: #333537;
-        z-index: $z-mobile-menu;
-        overflow: auto;
-        transition: opacity 0.5s;
-        display: flex;
-        align-items: center;
-
+        &__inner {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #333537;
+            z-index: $z-mobile-menu;
+            overflow: auto;
+            transition: opacity 0.5s;
+            display: flex;
+            align-items: center;
+        }
+    
         &__list {
             width: 100%;
             padding: 0 1rem;
@@ -63,10 +63,4 @@
             right: rem(42px);
         }
     }
-}
-
-.is-active {
-    left: 0;
-    opacity: 1;
-    transition: opacity 0.5s;
 }
