--- a/src/styles/blocks/_fixed-menu.scss
+++ b/src/styles/blocks/_fixed-menu.scss
@@ -17,8 +17,13 @@
 
         &--active {
             .fixed-menu__link {
-                border-color: #ccc;
-                transition: all 0.4s;
+                border-color: #fff;
+                transition: all 1s;
+            
+                .fixed-menu--dark & {
+                    border-color: #000;
+                    transition: all 1s;
+                }
             }
         }
     }
@@ -30,7 +35,7 @@
         border-radius: 50%;
         border: rem(1px) solid transparent;
         position: relative;
-        transition: all 0.4s;
+        transition: all 1s;
 
         &::before {
             content: '';
@@ -39,10 +44,16 @@
             width: rem(6px);
             height: rem(6px);
             border-radius: 50%;
-            background: #ccc;
+            background: #fff;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            transition: all 1s;
+
+            .fixed-menu--dark & {
+                background: #000;
+                transition: all 1s;
+            }
         }
     }
 }
